--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,6 +7,10 @@
   src: url("fonts/LibreFranklin-VariableFont_wght.ttf");
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .libre {
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
     "Liberation Mono", "Courier New", monospace;
