--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,6 +6,16 @@
   font-family: "Libre";
   src: url("fonts/LibreFranklin-VariableFont_wght.ttf");
 }
+@font-face {
+  font-family: "Black-Ops";
+  src: url("fonts/BlackOpsOne-Regular.ttf");
+}
+@font-face {
+  font-family: "Black-Ops";
+  src:
+    local("Black-Ops"),
+    url("./fonts/BlackOpsOne-Regular.ttf") format("ttf");
+}
 
 html {
   scroll-behavior: smooth;
@@ -14,4 +24,18 @@ html {
 .libre {
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
     "Liberation Mono", "Courier New", monospace;
+}
+.blackOps {
+  font-family: "Black-Ops", sans-serif; /* or a fallback font if needed */
+}
+p {
+  font-size: 1.125rem;
+}
+.no-scrollbar::-webkit-scrollbar {
+  display: none; /* Hide scrollbar for Chrome, Safari, and Opera */
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none; /* Hide scrollbar for Internet Explorer and Edge */
+  scrollbar-width: none; /* Hide scrollbar for Firefox */
 }
