--- a/src/styles/portfolio.css
+++ b/src/styles/portfolio.css
@@ -13,13 +13,13 @@
 .list-3d .item:has(+ *:hover) {
   transform: translateZ(-50px) rotateY(-30deg);
 }
-.list-3d .item:has(+ * + *:hover) {
+.list-3d .item:has(+ *:hover) {
   transform: translateZ(-100px) rotateY(-10deg);
 }
 
 .list-3d .item:hover + .item {
   transform: translateZ(-50px) rotateY(30deg);
 }
-.list-3d .item:hover + .item + .item {
+.list-3d .item:hover + .item {
   transform: translateZ(-100px) rotateY(10deg);
 }
